styling. fixed vertical line alignment on 768px breakpoint desktop.

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -345,7 +345,7 @@ img.mob-menu {
 .vert-divider {
   position: absolute;
   width: 0px;
-  height: 100%;
+  height: 98px;
   border-left: 1px solid $light-trans-grey;
   margin-left: -22px;
 }
